--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -15,67 +15,55 @@
             {{ block "extrameta" . }}{{ end }}
         </head>
         <body class="bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
-          {{ block "topbarLayout" . }}
-            <div class="px-1 grid grid-cols-1 md:grid-cols-12 gap-2">
-              <div class="{{ layoutSide }}">
-                {{ block "topbarLeft" . }} {{ end }}
-              </div>
-              <header style="z-index: 20" class="{{ layoutCenter }}">
-                {{ block "topbar" . }}
-                  {{ template "layouts/topbar" . }}
-                {{ end }}
+          <div class="px-1" style="z-index: 20">
+            {{ block "topbarLayout" . }}
+            <div class="grid grid-cols-1 md:grid-cols-12">
+              <header class="col-span-1 md:col-start-3 md:col-span-8">
+                {{ template "layouts/topbar" . }}
               </header>
-              <div class="{{ layoutSide }}">
-                {{ block "topbarRight" . }} {{ end }}
-              </div>
             </div>
-          {{ end }}
+            {{ end }}
+          </div>
 
-          <div class="flex flex-col min-h-screen">
+          <div class="px-1 flex flex-col min-h-screen gap-4">
             {{ block "contentLayout" . }}
-              <div class="px-1 grid grid-cols-1 md:grid-cols-12 gap-2">
-                <div class="{{ layoutSide }}">
+              <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                <div class="col-span-1 md:col-span-2">
                   {{ block "contentLeft" . }} {{ end }}
                 </div>
-                <main class="{{ layoutCenter }}">
+                <main class="col-span-1 md:col-span-8">
                   {{ block "content" . }}{{ end }}
                 </main>
-                <div class="{{ layoutSide }}">
+                <div class="col-span-1 md:col-span-2">
                   {{ block "contentRight" . }} {{ end }}
                 </div>
               </div>
             {{ end }}
 
             {{ block "contentAfterLayout" . }}
-              <div class="px-1 grid grid-cols-1 md:grid-cols-12 gap-2">
-                <div class="{{ layoutSide }}">
+              <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                <div class="col-span-1 md:col-span-2">
                   {{ block "contentAfterLeft" . }} {{ end }}
                 </div>
-                <main class="px-1 {{ layoutCenter }}">
+                <main class="col-span-1 md:col-span-8">
                   {{ block "contentAfter" . }}{{ end }}
                 </main>
-                <div class="{{ layoutSide }}">
+                <div class="col-span-1 md:col-span-2">
                   {{ block "contentAfterRight" . }} {{ end }}
                 </div>
               </div>
             {{ end }}
           </div>
 
-          {{ block "footerLayout" . }}
-            <div class="px-1 grid grid-cols-1 md:grid-cols-12 gap-2">
-              <div class="{{ layoutSide }}">
-                {{ block "footerLeft" . }} {{ end }}
-              </div>
-              <footer class="mt-16 {{ layoutCenter }}">
-                {{ block "footer" . }}
-                  {{ template "layouts/footer" . }}
-                {{ end }}
+          <div class="px-1 mt-16">
+            {{ block "footerLayout" . }}
+            <div class="grid grid-cols-1 md:grid-cols-12">
+              <footer class="col-span-1 md:col-start-3 md:col-span-8">
+                {{ template "layouts/footer" . }}
               </footer>
-              <div class="{{ layoutSide }}">
-                {{ block "footerRight" . }} {{ end }}
-              </div>
             </div>
-          {{ end }}
+            {{ end }}
+          </div>
 
         </body>
     </html>
