--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -49,82 +49,109 @@
             <p class="text-xl font-bold dark:text-white">Timeline</p>
         </div>
 
-        <div class="flex flex-col gap-3 relative">
-            <div
-                class="absolute left-8 top-0 bottom-0 w-px bg-gray-300 dark:bg-gray-600"
-            ></div>
-            {{ range .Timeline }}
-                <div
-                    class="px-6 py-2 bg-white dark:bg-gray-800 rounded drop-shadow-sm w-fit"
-                >
-                    {{ if .Repo }}
-                        {{ $userHandle :=  index $.DidHandleMap .Repo.Did }}
-                        <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
-                                {{ template "user/fragments/picHandleLink" $userHandle }}
-                                {{ if .Source }}
-                                    forked
-                                    <a
-                                        href="/{{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}"
-                                        class="no-underline hover:underline"
-                                    >
-                                        {{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}</a
-                                    >
-                                    to
-                                    <a
-                                        href="/{{ $userHandle }}/{{ .Repo.Name }}"
-                                        class="no-underline hover:underline"
-                                        >{{ .Repo.Name }}</a
-                                    >
-                                {{ else }}
-                                    created
-                                    <a
-                                        href="/{{ $userHandle }}/{{ .Repo.Name }}"
-                                        class="no-underline hover:underline"
-                                        >{{ .Repo.Name }}</a
-                                    >
-                                {{ end }}
-                                <span
-                                    class="text-gray-700 dark:text-gray-400 text-xs"
-                                    >{{ template "repo/fragments/time" .Repo.Created }}</span
-                                >
-                            </p>
-                        </div>
-                    {{ else if .Follow }}
-                        {{ $userHandle :=  index $.DidHandleMap .Follow.UserDid }}
-                        {{ $subjectHandle :=  index $.DidHandleMap .Follow.SubjectDid }}
-                        <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
-                                {{ template "user/fragments/picHandleLink" $userHandle }}
-                                followed
-                                {{ template "user/fragments/picHandleLink" $subjectHandle }}
-                                <span
-                                    class="text-gray-700 dark:text-gray-400 text-xs"
-                                    >{{ template "repo/fragments/time" .Follow.FollowedAt }}</span
-                                >
-                            </p>
-                        </div>
-                    {{ else if .Star }}
-                        {{ $starrerHandle :=  index $.DidHandleMap .Star.StarredByDid }}
-                        {{ $repoOwnerHandle :=  index $.DidHandleMap .Star.Repo.Did }}
-                        <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
-                                {{ template "user/fragments/picHandleLink" $starrerHandle }}
-                                starred
-                                <a
-                                    href="/{{ $repoOwnerHandle }}/{{ .Star.Repo.Name }}"
-                                    class="no-underline hover:underline"
-                                    >{{ $repoOwnerHandle | truncateAt30 }}/{{ .Star.Repo.Name }}</a
-                                >
-                                <span
-                                    class="text-gray-700 dark:text-gray-400 text-xs"
-                                    >{{ template "repo/fragments/time" .Star.Created }}</spa
-                                >
-                            </p>
-                        </div>
-                    {{ end }}
+        <div class="flex flex-col gap-4">
+          {{ range $i, $e := .Timeline }}
+            <div class="relative">
+              {{ if ne $i 0 }}
+                <div class="absolute left-8 -top-4 w-px h-4 bg-gray-300 dark:bg-gray-600"></div>
+              {{ end }}
+              {{ with $e }}
+                <div class="flex flex-col divide-y divide-gray-200 dark:divide-gray-700 border border-gray-200 dark:border-gray-700 rounded-sm">
+                  {{ if .Repo }}
+                    {{ block "repoEvent" (list $ .Repo .Source) }} {{ end }}
+                  {{ else if .Star }}
+                    {{ block "starEvent" (list $ .Star) }} {{ end }}
+                  {{ else if .Follow }}
+                    {{ block "followEvent" (list $ .Follow .Profile .FollowStats) }} {{ end }}
+                  {{ end }}
                 </div>
-            {{ end }}
+              {{ end }}
+            </div>
+          {{ end }}
         </div>
     </div>
+{{ end }}
+
+{{ define "repoEvent" }}
+  {{ $root := index . 0 }}
+  {{ $repo := index . 1 }}
+  {{ $source := index . 2 }}
+  {{ $userHandle :=  index $root.DidHandleMap $repo.Did }}
+    <div class="pl-6 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2 text-sm">
+      {{ template "user/fragments/picHandleLink" $userHandle }}
+      {{ with $source }}
+        forked
+        <a href="/{{ index $root.DidHandleMap .Did }}/{{ .Name }}"class="no-underline hover:underline">
+            {{ index $root.DidHandleMap .Did }}/{{ .Name }}
+        </a>
+        to
+        <a href="/{{ $userHandle }}/{{ $repo.Name }}" class="no-underline hover:underline">{{ $repo.Name }}</a>
+      {{ else }}
+        created
+        <a href="/{{ $userHandle }}/{{ $repo.Name }}" class="no-underline hover:underline">
+          {{ $repo.Name }}
+        </a>
+      {{ end }}
+      <span class="text-gray-700 dark:text-gray-400 text-xs">{{ template "repo/fragments/time" $repo.Created }}</span>
+    </div>
+  {{ with $repo }}
+    {{ template "user/fragments/repoCard" (list $root . true) }}
+  {{ end }}
+{{ end }}
+
+{{ define "starEvent" }}
+  {{ $root := index . 0 }}
+  {{ $star := index . 1 }}
+  {{ with $star }}
+    {{ $starrerHandle :=  index $root.DidHandleMap .StarredByDid }}
+    {{ $repoOwnerHandle :=  index $root.DidHandleMap .Repo.Did }}
+    <div class="pl-6 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2 text-sm">
+        {{ template "user/fragments/picHandleLink" $starrerHandle }}
+        starred
+        <a href="/{{ $repoOwnerHandle }}/{{ .Repo.Name }}" class="no-underline hover:underline">
+          {{ $repoOwnerHandle | truncateAt30 }}/{{ .Repo.Name }}
+        </a>
+        <span class="text-gray-700 dark:text-gray-400 text-xs">{{ template "repo/fragments/time" .Created }}</span>
+    </div>
+    {{ with .Repo }}
+      {{ template "user/fragments/repoCard" (list $root . true) }}
+    {{ end }}
+  {{ end }}
+{{ end }}
+
+
+{{ define "followEvent" }}
+  {{ $root := index . 0 }}
+  {{ $follow := index . 1 }}
+  {{ $profile := index . 2 }}
+  {{ $stat := index . 3 }}
+
+  {{ $userHandle :=  index $root.DidHandleMap $follow.UserDid }}
+  {{ $subjectHandle :=  index $root.DidHandleMap $follow.SubjectDid }}
+  <div class="pl-6 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2 text-sm">
+      {{ template "user/fragments/picHandleLink" $userHandle }}
+      followed
+      {{ template "user/fragments/picHandleLink" $subjectHandle }}
+      <span class="text-gray-700 dark:text-gray-400 text-xs">{{ template "repo/fragments/time" $follow.FollowedAt }}</span>
+  </div>
+  <div class="py-4 px-6 drop-shadow-sm rounded bg-white dark:bg-gray-800 flex items-center gap-4">
+    <div class="flex-shrink-0 max-h-full w-24 h-24">
+      <img class="object-cover rounded-full p-2" src="{{ fullAvatar $subjectHandle }}" />
+    </div>
+
+    <div class="flex-1 min-h-0 justify-around flex flex-col">
+      <a href="/{{ $subjectHandle }}">
+        <span class="font-bold dark:text-white overflow-hidden text-ellipsis whitespace-nowrap max-w-full">{{ $subjectHandle | truncateAt30 }}</span>
+      </a>
+      {{ with $profile.Description }}
+        <p class="text-sm pb-2 md:pb-2">{{.}}</p>
+      {{ end }}
+      <div class="text-sm flex items-center gap-2 my-2 overflow-hidden text-ellipsis whitespace-nowrap max-w-full text-sm">
+        <span class="flex-shrink-0">{{ i "users" "size-4" }}</span>
+        <span id="followers">{{ $stat.Followers }} followers</span>
+        <span class="select-none after:content-['·']"></span>
+        <span id="following">{{  $stat.Following  }} following</span>
+      </div>
+    </div>
+  </div>
 {{ end }}
