--- a/appview/pages/templates/user/fragments/repoCard.html
+++ b/appview/pages/templates/user/fragments/repoCard.html
@@ -5,7 +5,7 @@
 
   {{ with $repo }}
     <div class="py-4 px-6 drop-shadow-sm rounded bg-white dark:bg-gray-800">
-        <div class="font-medium dark:text-white">
+        <div class="font-medium dark:text-white flex gap-2 items-center">
           {{- if $fullName -}}
             <a href="/{{ index $root.DidHandleMap .Did }}/{{ .Name }}">{{ index $root.DidHandleMap .Did }}/{{ .Name }}</a>
           {{- else -}}
@@ -26,32 +26,32 @@
 {{ end }}
 
 {{ define "repoStats" }}
-<div class="text-gray-400 pt-4 text-sm font-mono inline-flex gap-4 mt-auto">
-  {{ with .Language }}
-      <div class="flex gap-2 items-center text-sm">
-        <div class="size-2 rounded-full" style="background-color: {{ langColor . }};"></div>
-          <span>{{ . }}</span>
-      </div>
-  {{ end }}
-  {{ with .StarCount }}
-      <div class="flex gap-1 items-center text-sm">
-          {{ i "star" "w-3 h-3 fill-current" }}
-          <span>{{ . }}</span>
-      </div>
-  {{ end }}
-  {{ with .IssueCount.Open }}
-      <div class="flex gap-1 items-center text-sm">
-          {{ i "circle-dot" "w-3 h-3" }}
-          <span>{{ . }}</span>
-      </div>
-  {{ end }}
-  {{ with .PullCount.Open }}
-      <div class="flex gap-1 items-center text-sm">
-          {{ i "git-pull-request" "w-3 h-3" }}
-          <span>{{ . }}</span>
-      </div>
-  {{ end }}
-</div>
+  <div class="text-gray-400 pt-4 text-sm font-mono inline-flex gap-4 mt-auto">
+    {{ with .Language }}
+        <div class="flex gap-2 items-center text-sm">
+          <div class="size-2 rounded-full" style="background-color: {{ langColor . }};"></div>
+            <span>{{ . }}</span>
+        </div>
+    {{ end }}
+    {{ with .StarCount }}
+        <div class="flex gap-1 items-center text-sm">
+            {{ i "star" "w-3 h-3 fill-current" }}
+            <span>{{ . }}</span>
+        </div>
+    {{ end }}
+    {{ with .IssueCount.Open }}
+        <div class="flex gap-1 items-center text-sm">
+            {{ i "circle-dot" "w-3 h-3" }}
+            <span>{{ . }}</span>
+        </div>
+    {{ end }}
+    {{ with .PullCount.Open }}
+        <div class="flex gap-1 items-center text-sm">
+            {{ i "git-pull-request" "w-3 h-3" }}
+            <span>{{ . }}</span>
+        </div>
+    {{ end }}
+  </div>
 {{ end }}
 
 
