appview: fix repo ordering on timeline
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -18,7 +18,7 @@
           <div class="px-1" style="z-index: 20">
             {{ block "topbarLayout" . }}
             <div class="grid grid-cols-1 md:grid-cols-12">
-              <header class="col-span-1 md:col-start-3 md:col-span-8">
+              <header class="col-span-1 md:col-start-3 md:col-span-8" style="z-index: 20;">
                 {{ template "layouts/topbar" . }}
               </header>
             </div>
