--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -127,56 +127,36 @@
 {{ end }}
 
 {{ define "fileTree" }}
-    <div
-        id="file-tree"
-        class="col-span-1 pr-2 md:border-r md:border-gray-200 dark:md:border-gray-700"
-    >
-        {{ $containerstyle := "py-1" }}
-        {{ $linkstyle := "no-underline hover:underline dark:text-white" }}
+  <div id="file-tree" class="col-span-1 pr-2 md:border-r md:border-gray-200 dark:md:border-gray-700" >
+    {{ $linkstyle := "no-underline hover:underline dark:text-white" }}
 
-        {{ range .Files }}
-            {{ if not .IsFile }}
-                <div class="{{ $containerstyle }}">
-                    <div class="flex justify-between items-center">
-                        <a
-                            href="/{{ $.RepoInfo.FullName }}/tree/{{ $.Ref | urlquery }}/{{ .Name }}"
-                            class="{{ $linkstyle }}"
-                        >
-                            <div class="flex items-center gap-2">
-                                {{ i "folder" "size-4 fill-current" }}
-                                {{ .Name }}
-                            </div>
-                        </a>
+    {{ range .Files }}
+      <div class="grid grid-cols-2 gap-4 items-center py-1">
+        <div class="col-span-1">
+          {{ $link := printf "/%s/%s/%s/%s" $.RepoInfo.FullName "tree" (urlquery $.Ref) .Name }}
+          {{ $icon := "folder" }}
+          {{ $iconStyle := "size-4 fill-current" }}
 
-                        {{ if .LastCommit }}
-                        <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
-                        {{ end }}
-                    </div>
-                </div>
-            {{ end }}
-        {{ end }}
+          {{ if .IsFile }}
+            {{ $link = printf "/%s/%s/%s/%s" $.RepoInfo.FullName "blob" (urlquery $.Ref) .Name }}
+            {{ $icon = "file" }}
+            {{ $iconStyle = "size-4" }}
+          {{ end }}
+          <a href="{{ $link }}" class="{{ $linkstyle }}">
+            <div class="flex items-center gap-2">
+              {{ i $icon $iconStyle }}{{ .Name }}
+            </div>
+          </a>
+        </div>
 
-        {{ range .Files }}
-            {{ if .IsFile }}
-                <div class="{{ $containerstyle }}">
-                    <div class="flex justify-between items-center">
-                        <a
-                            href="/{{ $.RepoInfo.FullName }}/blob/{{ $.Ref | urlquery }}/{{ .Name }}"
-                            class="{{ $linkstyle }}"
-                        >
-                            <div class="flex items-center gap-2">
-                                {{ i "file" "size-4" }}{{ .Name }}
-                            </div>
-                        </a>
-
-                        {{ if .LastCommit }}
-                        <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
-                        {{ end }}
-                    </div>
-                </div>
-            {{ end }}
-        {{ end }}
-    </div>
+        <div class="text-xs col-span-1 text-right">
+          {{ with .LastCommit }}
+            <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .When }}</a>
+          {{ end }}
+        </div>
+      </div>
+    {{ end }}
+  </div>
 {{ end }}
 
 {{ define "rightInfo" }}
