--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -19,7 +19,6 @@
 {{define "repoContent"}}
 <main>
   <div class="tree">
-    {{ $containerstyle := "py-1" }}
     {{ $linkstyle := "no-underline hover:underline" }}
 
     <div class="pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-700">
@@ -54,44 +53,37 @@
     </div>
 
     {{ range .Files }}
-    {{ if not .IsFile }}
-    <div class="{{ $containerstyle }}">
-        <div class="flex justify-between items-center">
-            <a href="/{{ $.BaseTreeLink }}/{{ .Name }}" class="{{ $linkstyle }}">
-                <div class="flex items-center gap-2">
-                  {{ i "folder" "size-4 fill-current" }}{{ .Name }}
-                </div>
-            </a>
-            {{ if .LastCommit}}
-            <div class="flex items-end gap-2">
-              <span  class="text text-gray-500 dark:text-gray-400 mr-6">{{ .LastCommit.Message }}</span>
-              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
+      <div class="grid grid-cols-12 gap-4 items-center py-1">
+        <div class="col-span-6 md:col-span-3">
+          {{ $link := printf "/%s/%s/%s/%s/%s" $.RepoInfo.FullName "tree" (urlquery $.Ref) $.TreePath .Name }}
+          {{ $icon := "folder" }}
+          {{ $iconStyle := "size-4 fill-current" }}
+
+          {{ if .IsFile }}
+            {{ $icon = "file" }}
+            {{ $iconStyle = "size-4" }}
+          {{ end }}
+          <a href="{{ $link }}" class="{{ $linkstyle }}">
+            <div class="flex items-center gap-2">
+              {{ i $icon $iconStyle }}{{ .Name }}
             </div>
-            {{ end }}
+          </a>
         </div>
-    </div>
-    {{ end }}
+
+        <div class="col-span-0 md:col-span-7 hidden md:block overflow-hidden">
+          {{ with .LastCommit }}
+            <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400 block truncate">{{ .Message }}</a>
+          {{ end }}
+        </div>
+
+        <div class="col-span-6 md:col-span-2 text-right">
+          {{ with .LastCommit }}
+            <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .When }}</a>
+          {{ end }}
+        </div>
+      </div>
     {{ end }}
 
-    {{ range .Files }}
-    {{ if .IsFile }}
-    <div class="{{ $containerstyle }}">
-        <div class="flex justify-between items-center">
-            <a href="/{{ $.BaseBlobLink }}/{{ .Name }}" class="{{ $linkstyle }}">
-                <div class="flex items-center gap-2">
-                  {{ i "file" "size-4" }}{{ .Name }}
-                </div>
-            </a>
-            {{ if .LastCommit}}
-            <div class="flex items-end gap-2">
-              <span  class="text text-gray-500 dark:text-gray-400 mr-6">{{ .LastCommit.Message }}</span>
-              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
-            </div>
-            {{ end }}
-        </div>
-    </div>
-    {{ end }}
-    {{ end }}
   </div>
 </main>
 {{end}}
