appview/pages: markup: add `@` user-mention parsing in markdown
add custom styling rule for mention links (no underline unless hover)

Signed-off-by: Seongmin Lee <boltlessengineer@proton.me>

--- a/input.css
+++ b/input.css
@@ -161,6 +161,10 @@
             @apply no-underline;
         }
 
+        .prose a.mention {
+            @apply no-underline hover:underline;
+        }
+
         .prose li {
             @apply my-0 py-0;
         }
