--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -14,20 +14,16 @@
             <title>{{ block "title" . }}{{ end }} · tangled</title>
             {{ block "extrameta" . }}{{ end }}
         </head>
-        <body class="bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
-          <div class="px-1">
-            {{ block "topbarLayout" . }}
-            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
-              <header class="col-span-1 md:col-start-3 md:col-span-8" style="z-index: 20;">
-                {{ template "layouts/topbar" . }}
-              </header>
-            </div>
-            {{ end }}
-          </div>
+        <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] md:grid-cols-12 gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
+          {{ block "topbarLayout" . }}
+            <header class="px-1 col-span-1 md:col-start-3 md:col-span-8" style="z-index: 20;">
+              {{ template "layouts/topbar" . }}
+            </header>
+          {{ end }}
 
-          <div class="px-1 flex flex-col min-h-screen gap-4">
-            {{ block "contentLayout" . }}
-              <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+          {{ block "mainLayout" . }}
+            <div class="px-1 col-span-1 md:col-start-3 md:col-span-8 flex flex-col gap-4">
+              {{ block "contentLayout" . }}
                 <div class="col-span-1 md:col-span-2">
                   {{ block "contentLeft" . }} {{ end }}
                 </div>
@@ -37,11 +33,9 @@
                 <div class="col-span-1 md:col-span-2">
                   {{ block "contentRight" . }} {{ end }}
                 </div>
-              </div>
-            {{ end }}
-
-            {{ block "contentAfterLayout" . }}
-              <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+              {{ end }}
+  
+              {{ block "contentAfterLayout" . }}
                 <div class="col-span-1 md:col-span-2">
                   {{ block "contentAfterLeft" . }} {{ end }}
                 </div>
@@ -51,20 +45,15 @@
                 <div class="col-span-1 md:col-span-2">
                   {{ block "contentAfterRight" . }} {{ end }}
                 </div>
-              </div>
-            {{ end }}
-          </div>
-
-          <div class="px-1 mt-16">
-            {{ block "footerLayout" . }}
-            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
-              <footer class="col-span-1 md:col-start-3 md:col-span-8">
-                {{ template "layouts/footer" . }}
-              </footer>
+              {{ end }}
             </div>
-            {{ end }}
-          </div>
+          {{ end }}
 
+          {{ block "footerLayout" . }}
+            <footer class="px-1 col-span-1 md:col-start-3 md:col-span-8 mt-12">
+              {{ template "layouts/footer" . }}
+            </footer>
+          {{ end }}
         </body>
     </html>
 {{ end }}
