--- a/appview/pages/templates/repo/fragments/diffChangedFiles.html
+++ b/appview/pages/templates/repo/fragments/diffChangedFiles.html
@@ -1,7 +1,7 @@
 {{ define "repo/fragments/diffChangedFiles" }}
   {{ $stat := .Stat }}
   {{ $fileTree := fileTree .ChangedFiles }}
-  <section class="overflow-x-auto text-sm px-6 py-2 border border-gray-200 dark:border-gray-700 w-full mx-auto md:min-h-screen rounded bg-white dark:bg-gray-800 drop-shadow-sm">
+  <section class="overflow-x-auto text-sm px-6 py-2 border border-gray-200 dark:border-gray-700 w-full mx-auto min-h-full rounded bg-white dark:bg-gray-800 drop-shadow-sm">
     <div class="diff-stat">
       <div class="flex gap-2 items-center">
         <strong class="text-sm uppercase dark:text-gray-200">Changed files</strong>
