appview: layouts/topbar: add repositories item pointing to logged in user's repos in the dropdown menu
Signed-off-by: dusk <y.bera003.06@protonmail.com>

--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -45,6 +45,7 @@
         class="absolute flex flex-col right-0 mt-4 p-4 rounded w-48 bg-white dark:bg-gray-800 dark:text-white border border-gray-200 dark:border-gray-700"
     >
         <a href="/{{ $user }}">profile</a>
+        <a href="/{{ $user }}?tab=repos">repositories</a>
         <a href="/knots">knots</a>
         <a href="/spindles">spindles</a>
         <a href="/settings">settings</a>
