--- a/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
@@ -13,24 +13,22 @@
         </span>
       </div>
 
-      <div class="flex-shrink-0 flex items-center">
+      <div class="flex-shrink-0 flex items-center gap-2">
         {{ $latestRound := .LastRoundNumber }}
         {{ $lastSubmission := index .Submissions $latestRound }}
         {{ $commentCount := len $lastSubmission.Comments }}
         {{ if and $pipeline $pipeline.Id }}
-          <div class="inline-flex items-center gap-2">
-            {{ template "repo/pipelines/fragments/pipelineSymbol" $pipeline }}
-            <span class="mx-2 before:content-['·'] before:select-none"></span>
-          </div>
+          {{ template "repo/pipelines/fragments/pipelineSymbol" $pipeline }}
+          <span class="before:content-['·'] before:select-none text-gray-500 dark:text-gray-400"></span>
         {{ end }}
         <span>
-          <div class="inline-flex items-center gap-2">
+          <div class="inline-flex items-center gap-1">
             {{ i "message-square" "w-3 h-3 md:hidden" }}
             {{ $commentCount }}
             <span class="hidden md:inline">comment{{if ne $commentCount 1}}s{{end}}</span>
           </div>
         </span>
-        <span class="mx-2 before:content-['·'] before:select-none"></span>
+        <span class="before:content-['·'] before:select-none text-gray-500 dark:text-gray-400"></span>
         <span>
           <span class="hidden md:inline">round</span>
           <span class="font-mono">#{{ $latestRound }}</span>
